[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "joblib>=1.4.2",
    "nltk>=3.9.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.43.1",
    "ta>=0.11.0",
    "tensorflow>=2.14.0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.54",
]
